--- a/SteveApiEngine/SteveApiEngine.vcxproj
+++ b/SteveApiEngine/SteveApiEngine.vcxproj
@@ -133,7 +133,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SteveApiEngine.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SteveApiEngine.rc" />
