--- a/SteveApiEngine/SteveApiEngine.vcxproj.filters
+++ b/SteveApiEngine/SteveApiEngine.vcxproj.filters
@@ -29,7 +29,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SteveApiEngine.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
