이미지 로드, 벡터2 추가

--- a/SteveApiEngine/SteveApiEngine.vcxproj.filters
+++ b/SteveApiEngine/SteveApiEngine.vcxproj.filters
@@ -45,5 +45,8 @@
     <Image Include="SteveApiEngine.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\..\..\Downloads\gura.jpeg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
