--- a/SteveApiEngine/SteveApiEngine.vcxproj
+++ b/SteveApiEngine/SteveApiEngine.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -139,6 +140,7 @@
     <ResourceCompile Include="SteveApiEngine.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\Downloads\gura.jpeg" />
     <Image Include="small.ico" />
     <Image Include="SteveApiEngine.ico" />
   </ItemGroup>
