--- a/SteveApiEngine_SOURCE/SteveApiEngine_SOURCE.vcxitems.filters
+++ b/SteveApiEngine_SOURCE/SteveApiEngine_SOURCE.vcxitems.filters
@@ -35,11 +35,13 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)steveMath.cpp">
       <Filter>Common</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Texture.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Resource.cpp">
       <Filter>Resource</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)ResourceManager.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Texture.cpp">
       <Filter>Resource</Filter>
     </ClCompile>
   </ItemGroup>
@@ -87,11 +89,13 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Object.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Texture.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Resource.h">
       <Filter>Resource</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)ResourceManager.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Texture.h">
       <Filter>Resource</Filter>
     </ClInclude>
   </ItemGroup>
