animation, animator, alphablend

--- a/SteveApiEngine/SteveApiEngine.vcxproj
+++ b/SteveApiEngine/SteveApiEngine.vcxproj
@@ -152,6 +152,9 @@
       <Project>{6e8a3380-0169-4d33-9b72-f273bb802e10}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
