--- a/.gitignore
+++ b/.gitignore
@@ -402,12 +402,12 @@ FodyWeavers.xsd
 # Library Folder
 !External/Library/Fmod/Debug/
 !External/Library/Fmod/Release/
-#!External/Library/DirectXTex/Debug/
-#!External/Library/DirectXTex/Release/
-#!External/Library/FW1FontWrapper/Debug/
-#!External/Library/FW1FontWrapper/Release/
-#!External/Library/Assimp/Debug/
-#!External/Library/Assimp/Release/
+!External/Library/DirectXTex/Debug/
+!External/Library/DirectXTex/Release/
+!External/Library/FW1FontWrapper/Debug/
+!External/Library/FW1FontWrapper/Release/
+!External/Library/Assimp/Debug/
+!External/Library/Assimp/Release/
 
 #resource
 /x64￦Shaders_SOURCE￦
