--- a/SteveApiEngine_Window/SteveApiEngine_Window.vcxproj.filters
+++ b/SteveApiEngine_Window/SteveApiEngine_Window.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="LoadScenes.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Cat.h">
+      <Filter>Contents</Filter>
+    </ClInclude>
+    <ClInclude Include="CatScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlayScene.cpp">
@@ -45,6 +51,12 @@
       <Filter>Contents</Filter>
     </ClCompile>
     <ClCompile Include="PlayerScript.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Cat.cpp">
+      <Filter>Contents</Filter>
+    </ClCompile>
+    <ClCompile Include="CatScript.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
   </ItemGroup>
